tests/NormalTests/paczka1/small_fuzzy/56482402.err
Error in line 3: KfG A199 39,8
Error in line 9: 9sKowIyrQ A51 9,08
Error in line 13: YMqcGsO S181 67,9
